keycloak/nginx-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: {NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2500m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/real-ip-header: "X-Real-IP"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: {INGRESS_CLASS_NAME}
  rules:
    - host: {DOMAIN_HERE}
      http:
        paths:
          - backend:
              service:
                name: {SERVCE_NAME}
                port:
                  number: 80
            path: /
            pathType: Prefix
